# SAI-SearchAI

./: .env.example  .gitignore  Dockerfile  README.md  config.ini  docker-compose.yml  email_draft.md  main.py  pyproject.toml  requirements.txt  transactions.csv  transactions_merged.csv
.claude/: settings.local.json
.transaction-search-data/: auth.json
templates/: index.html  results.html
